# everyday-arXiv

./: .env.example  .gitignore  404.html  AGENTS.md  LICENSE  README.md  dates.json  index.html  mkdocs.yml  pyproject.toml
config/: config.yaml  research_profile.md
data/: 2003-10-10.json  2006-10-19.json  2012-05-11.json  2013-07-16.json  2016-01-15.json  2016-02-22.json  2017-06-03.json  2017-08-07.json  2018-05-10.json  2018-08-20.json  2018-12-19.json  2019-01-23.json  2020-05-19.json  2020-08-24.json  2021-01-11.json  2021-05-19.json  2021-05-31.json  2021-07-12.json  2021-09-02.json  2021-11-08.json  2021-12-22.json  2022-01-13.json  2022-04-01.json  2022-05-10.json  2022-06-20.json  2022-08-29.json  2022-09-12.json  2022-10-29.json  2022-11-01.json  2022-11-14.json  2023-01-11.json  2023-01-12.json  2023-02-20.json  2023-03-04.json  2023-03-21.json  2023-03-28.json  2023-04-17.json  2023-05-03.json  2023-05-05.json  2023-05-18.json  (+508 more)
docs/: index.md
guide/: 404.html  index.html  sitemap.xml
relevant/: 2026-04-14.json  2026-04-15.json  2026-04-16.json  2026-04-17.json  2026-04-18.json  2026-04-19.json  2026-04-20.json  2026-04-21.json  2026-04-22.json  2026-04-23.json  2026-04-24.json  2026-04-25.json  2026-04-26.json  2026-04-27.json  2026-04-28.json  2026-04-29.json  2026-04-30.json  2026-05-01.json  2026-05-02.json  2026-05-03.json  2026-05-04.json  2026-05-05.json  2026-05-06.json  2026-05-07.json  2026-05-08.json  2026-05-09.json  2026-05-10.json  2026-05-11.json  2026-05-12.json  2026-05-13.json  2026-05-14.json  2026-05-15.json  2026-05-16.json  (+2 more)
(+26 files in other folders)
