[project]
name = "everyday-arxiv"
version = "0.1.0"
description = "Daily arXiv paper fetcher with LLM-based relevance filtering"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "arxiv>=2.1.0",
    "httpx>=0.27.0",
    "pypdf>=6.10.2",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0",
]

[project.scripts]
everyday-arxiv = "src.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.6",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.36.2",
    "respx>=0.21",
]
